syntax = "proto3";

package greet;

option java_package = "com.proto.greet";
option java_multiple_files = true;

message Greeting{
  string first_name = 1;
  string last_name = 2;
}

// unary messages
message GreetRequest{
  Greeting greeting = 1;
}

message GreetResponse{
  string result = 1;
}

// server streaming messages
message tempCheckRequest{
  Greeting greeting = 1;
}

message tempCheckResponse{
  string result = 1;
}

// client streaming messages
message occupancyCheckRequest{
  Greeting greeting = 1;
}

message occupancyCheckResponse{
  string result = 1;
}

// bidirectional streaming messages
message elevatorStatusRequest {
  Greeting greeting = 1;
}

message elevatorStatusResponse {
  string result = 1;
}

service GreetService{
  // unary API
  rpc visitorCheck(GreetRequest) returns (GreetResponse) {};

  // server streaming API
  rpc tempCheck(tempCheckRequest) returns (stream tempCheckResponse) {};

  // client streaming API
  rpc occupancyCheck(stream occupancyCheckRequest) returns (occupancyCheckResponse) {};

  // BiDirectional streaming API
  rpc elevatorStatus(stream elevatorStatusRequest) returns (stream elevatorStatusResponse) {};
}
